# src/models/activity.go
@@ -6,12 +6,13 @@ import (
 
 // Activity กิจกรรมหลัก
 type Activity struct {
-	ID              primitive.ObjectID   `json:"id,omitempty" bson:"_id,omitempty"`
-	Name            *string              `json:"name" bson:"name" validate:"required" example:"Football Tournament"`
-	Type            string               `json:"type" bson:"type" validate:"required" example:"one"`
-	ActivityStateID primitive.ObjectID   `json:"activityStateId" bson:"activityStateId" validate:"required" example:"67bf1cdd95fb769b3ded079e"`
-	SkillID         primitive.ObjectID   `json:"skillId" bson:"skillId" validate:"required" example:"67bf18532b62df84b60d95a2"`
-	MajorIDs        []primitive.ObjectID `json:"majorIds" bson:"majorIds" validate:"required" example:"67bf0bd48873e448798fed34,67bf0bda8873e448798fed35"`
+	ID            primitive.ObjectID   `json:"id,omitempty" bson:"_id,omitempty"`
+	Name          *string              `json:"name" bson:"name" validate:"required" example:"Football Tournament"`
+	Type          string               `json:"type" bson:"type" validate:"required" example:"one"`
+	ActivityState string               `json:"activityState" bson:"activityState" validate:"required" example:"planning"`
+	Skill         string               `json:"skill" bson:"skill" validate:"required" example:"hard"`
+	File          string               `json:"file" bson:"file" validate:"required"  example:"image.jpg"`
+	MajorIDs      []primitive.ObjectID `json:"majorIds" bson:"majorIds" validate:"required" example:"67bf0bd48873e448798fed34,67bf0bda8873e448798fed35"`
 }
 
 // ActivityItem รายละเอียดกิจกรรมย่อย
@@ -34,8 +35,9 @@ type ActivityDto struct {
 	ID            primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
 	Name          *string            `json:"name" bson:"name" validate:"required" example:"Football Tournament"`
 	Type          string             `json:"type" bson:"type" validate:"required" example:"one"`
-	ActivityState ActivityState      `json:"activityState" bson:"activityState" validate:"required"`
-	Skill         Skill              `json:"skill" bson:"skill" validate:"required"`
+	ActivityState string             `json:"activityState" bson:"activityState" validate:"required"  example:"planning"`
+	Skill         string             `json:"skill" bson:"skill" validate:"required" example:"hard"`
+	File          string             `json:"file" bson:"file" validate:"required"  example:"image.jpg"`
 	Majors        []Major            `json:"majors" bson:"majors" validate:"required"`
 	ActivityItems []ActivityItem     `json:"activityItems"`
 }
